# spotsearch

./: README.md  install.sh  package-lock.json  package.json  uninstall.sh
src/: index.html  main.js  settings.css  settings.html  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  test_parse.rs  tests.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  config.rs  indexer.rs  lib.rs  main.rs
