[package]
name = "tauri-app"
version = "1.0.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled", "vtab"] }
notify = "8.2.0"
directories = "6.0.0"
toml = "1.1.2"
freedesktop-desktop-entry = "0.8.1"
libc = "0.2.186"

tauri-plugin-cli = "2.4.1"
tauri-plugin-single-instance = "2"
walkdir = "2.5.0"
base64 = "0.22"
gtk = "0.18"
gdk = "0.18"
gtk-layer-shell = { version = "0.8.2", features = ["v0_6"] }

